TODO: rxvt -help => (see rxvt-XXX(1))?
TODO: xor_rect should shift right
TODO IMPL: recalc bg only when not fully covering (no alpha, repeat|extend etc..)

TODO IMPL: colour-change event with index
TODO IMPL: recalc bg always on bg colour change

TODO: document typical actions in rxvt.1.pod keysyms
TODO: document meta comments and on_action hook
TODO: perl one-liner

	- Add DECSCUSR xterm extension to set the cursor to a vertical bar.
	- Add -mc option and multiClickTime resource to set the maximum time
	  between multi-click select events (patch by Joe Peterson).
	- New 'eval' extension to evaluate arbitrary perl code with keysym
	  bindings. The extension also provides methods that implement basic
	  actions, such as pasting selections and scrolling.
	- the macosx-clipboard and macosx-clipboard-native extensions have been removed.
	- the keysym-list extension has been removed, you can use the following
          perl one-liner to expand your existing .Xdefaults file to do without it:
	- kuake extension now uses the kuake.hotkey resource to specify the hotkey.
	- new 'matcher:select' mode of matcher to iterate over the matches with the keyboard.
	- the 'matcher:list' feature of matcher now honours the launcher
	  associated to a matched pattern.
	- fix up/down commands of searchable scrollback so that they always move
	  to the previous/next logical line with a match, if any.
	- searchable-scrollback resource has been deprecated (use keysym instead).
        - extension parameter passing is deprecated (use resource mechanism instead).
        - upgrade to GPLv3 (see COPYING).
        - Fix height and position of the stippled area in next scrollbar (patch
          by Thomas Otto).
        - fix off-by-one bug causing the iso14755 window not to jump out of the
          way properly.

9.20 Sat Apr 26 16:22:27 CEST 2014
        - (libptytty) fix bug that prevented urxvtd from writing utmp
          entries when using --fork (reported by Ryan Kavanagh).