@@ -36,6 +36,7 @@ TODO IMPL: recalc bg always on bg colour change
 TODO: document typical actions in rxvt.1.pod keysyms
 TODO: document meta comments and on_action hook
 TODO: perl one-liner
+TODO: warn with a graphical message when env has been modified
 
 	- Add DECSCUSR xterm extension to set the cursor to a vertical bar.
 	- Add -mc option and multiClickTime resource to set the maximum time
